--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "materialize-css": "^0.100.1",
     "moment": "^2.18.1",
     "morgan": "^1.8.2",
-    "node-waves": "^0.7.5",
+    "on-finished": "^2.3.0",
     "pug": "^2.0.0-rc.3",
     "vue": "^2.4.2"
   }
