--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/small-sunshines/mori.space#readme",
   "dependencies": {
     "express": "^4.15.4",
+    "express-error-handler": "^1.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "log4js": "^2.3.3",
