--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "private": true,
   "homepage": "https://github.com/small-sunshines/mori.space#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-error-handler": "^1.1.0",
     "font-awesome": "^4.7.0",
