--- a/package.json
+++ b/package.json
@@ -31,5 +31,14 @@
     "on-finished": "^2.3.0",
     "pug": "^2.0.0-rc.3",
     "vue": "^2.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "grunt": "^1.0.1",
+    "grunt-babel": "^7.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^2.2.1",
+    "grunt-contrib-uglify": "^3.0.1"
   }
 }
