--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   "homepage": "https://github.com/small-sunshines/mori.space#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
     "express-error-handler": "^1.1.0",
+    "express-session": "^1.15.5",
     "font-awesome": "^4.7.0",
+    "geolang-express": "^1.0.0",
+    "i18n-express": "^1.1.2",
     "jquery": "^3.2.1",
     "log4js": "^2.3.3",
     "material-design-icons-iconfont": "^3.0.3",
