--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "geolang-express": "^1.0.0",
     "i18n-express": "^1.1.2",
     "jquery": "^3.2.1",
+    "js-url": "^2.3.0",
     "log4js": "^2.3.3",
     "material-design-icons-iconfont": "^3.0.3",
     "materialize-css": "^0.100.1",
@@ -41,6 +42,7 @@
     "babel-preset-env": "^1.6.0",
     "grunt": "^1.0.1",
     "grunt-babel": "^7.0.0",
+    "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-uglify": "^3.0.1"
