--- a/package.json
+++ b/package.json
@@ -18,33 +18,23 @@
   "private": true,
   "homepage": "https://github.com/small-sunshines/mori.space#readme",
   "dependencies": {
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "express": "^4.15.4",
-    "express-error-handler": "^1.1.0",
-    "express-session": "^1.15.5",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "font-awesome": "^4.7.0",
     "geolang-express": "^1.0.0",
-    "i18n-express": "^1.1.2",
+    "i18n-express": "^1.1.3",
     "jquery": "^3.2.1",
     "js-url": "^2.3.0",
-    "log4js": "^2.3.3",
+    "log4js": "^2.3.10",
     "material-design-icons-iconfont": "^3.0.3",
-    "materialize-css": "^0.100.1",
-    "moment": "^2.18.1",
-    "morgan": "^1.8.2",
+    "materialize-css": "^0.100.2",
+    "moment": "^2.19.1",
     "on-finished": "^2.3.0",
-    "pug": "^2.0.0-rc.3",
-    "vue": "^2.4.2"
+    "pug": "^2.0.0-rc.4",
+    "vue": "^2.5.2",
+    "webpack": "^3.8.1"
   },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "grunt": "^1.0.1",
-    "grunt-babel": "^7.0.0",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.2.1",
-    "grunt-contrib-uglify": "^3.0.1"
-  }
+  "devDependencies": {}
 }
