--- a/package.json
+++ b/package.json
@@ -33,8 +33,13 @@
     "moment": "^2.19.1",
     "on-finished": "^2.3.0",
     "pug": "^2.0.0-rc.4",
-    "vue": "^2.5.2",
-    "webpack": "^3.8.1"
+    "vue": "^2.5.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
+    "webpack": "^3.8.1"
+  }
 }
