--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "geolang-express": "^1.0.0",
     "i18n-express": "^1.1.3",
@@ -39,6 +40,9 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.7",
+    "font-loader": "^0.1.2",
+    "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "webpack": "^3.8.1"
   }
