--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "i18n-express": "^1.1.3",
     "jquery": "^3.2.1",
     "js-url": "^2.3.0",
-    "log4js": "^2.3.10",
+    "log4js": "^2.3.11",
     "material-design-icons-iconfont": "^3.0.3",
     "materialize-css": "^0.100.2",
     "moment": "^2.19.1",
     "on-finished": "^2.3.0",
     "pug": "^2.0.0-rc.4",
-    "vue": "^2.5.2"
+    "vue": "^2.5.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -43,7 +43,7 @@
     "css-loader": "^0.28.7",
     "font-loader": "^0.1.2",
     "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "webpack": "^3.8.1"
   }
 }
