--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "font-loader": "^0.1.2",
     "style-loader": "^0.19.0",
