--- a/package.json
+++ b/package.json
@@ -1,50 +1,54 @@
 {
-  "name": "mori.space",
+  "name": "morispacewithnuxt",
   "version": "1.0.0",
-  "description": "mori.space 메인페이지 입니다.",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/small-sunshines/mori.space.git"
-  },
-  "author": "small-sunshines",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/small-sunshines/mori.space/issues"
-  },
+  "description": "Nuxt.js project",
+  "author": "small_sunshine <jioo0224@naver.com>",
   "private": true,
-  "homepage": "https://github.com/small-sunshines/mori.space#readme",
+  "scripts": {
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "npm run build && cross-env NODE_ENV=production node main.js",
+    "startdev": "cross-env NODE_ENV=development node main.js",
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+    "precommit": "npm run lint"
+  },
   "dependencies": {
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "cross-env": "^5.1.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
-    "geolang-express": "^1.0.0",
-    "i18n-express": "^1.1.3",
     "jquery": "^3.2.1",
-    "js-url": "^2.3.0",
-    "log4js": "^2.3.11",
+    "json-stringify-pretty-compact": "^1.0.4",
+    "log4js": "^2.3.12",
     "material-design-icons-iconfont": "^3.0.3",
     "materialize-css": "^0.100.2",
-    "moment": "^2.19.1",
+    "moment": "^2.19.2",
+    "nuxt": "^1.0.0-rc11",
     "on-finished": "^2.3.0",
+    "prismjs": "^1.8.4",
     "pug": "^2.0.0-rc.4",
-    "vue": "^2.5.3"
+    "stringify-object": "^3.2.1",
+    "urijs": "^1.19.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "font-loader": "^0.1.2",
-    "style-loader": "^0.19.0",
-    "uglifyjs-webpack-plugin": "^1.0.1",
-    "webpack": "^3.8.1"
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": 80
+    }
   }
 }
