--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
-    "start": "npm run build && cross-env NODE_ENV=production node main.js",
+    "start": "cross-env NODE_ENV=production node main.js",
     "startdev": "cross-env NODE_ENV=development node main.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
