--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nuxtjs/google-adsense": "^1.1.2",
     "@nuxtjs/google-analytics": "^2.0.2",
+    "@nuxtjs/sitemap": "^0.0.3",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
