--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free-brands": "^5.0.6",
+    "@fortawesome/fontawesome-free-regular": "^5.0.6",
+    "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "@nuxtjs/google-adsense": "^1.1.2",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/sitemap": "^0.0.3",
@@ -23,7 +26,6 @@
     "cross-env": "^5.1.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "json-stringify-pretty-compact": "^1.0.4",
     "log4js": "^2.3.12",
@@ -34,6 +36,7 @@
     "on-finished": "^2.3.0",
     "prismjs": "^1.8.4",
     "pug": "^2.0.0-rc.4",
+    "qonfucius-nuxt-fontawesome": "^0.0.1",
     "urijs": "^1.19.0"
   },
   "devDependencies": {
