--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Nuxt.js project",
   "author": "small_sunshine <jioo0224@naver.com>",
   "private": true,
+  "license": "AGPL-3.0",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
