--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/sitemap": "^0.0.3",
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cross-env": "^5.1.1",
