IE 미지원 페이지 제작완료

--- a/package.json
+++ b/package.json
@@ -24,17 +24,16 @@
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
     "cross-env": "^5.1.1",
     "express": "^4.16.2",
-    "express-session": "^1.15.6",
+    "express-useragent": "^1.0.12",
     "jquery": "^3.2.1",
     "json-stringify-pretty-compact": "^1.0.4",
-    "log4js": "^2.3.12",
+    "log4js": "^2.9.0",
     "material-design-icons-iconfont": "^3.0.3",
     "materialize-css": "^0.100.2",
     "moment": "^2.19.2",
-    "nuxt": "^1.0.0-rc11",
+    "nuxt": "^1.4.1",
     "on-finished": "^2.3.0",
     "prismjs": "^1.8.4",
     "pug": "^2.0.0-rc.4",
