--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/sitemap": "^0.0.3",
     "axios": "^0.17.1",
+    "babel-core": "^6.26.3",
     "body-parser": "^1.18.2",
     "cross-env": "^5.1.1",
     "express": "^4.16.2",
