--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "morispacewithnuxt",
+  "name": "mori.space",
   "version": "1.0.0",
-  "description": "Nuxt.js project",
+  "description": "볕뉘의 개인사이트입니다.",
   "author": "small_sunshine <jioo0224@naver.com>",
   "private": true,
   "license": "AGPL-3.0",
@@ -11,11 +11,11 @@
     "start": "cross-env NODE_ENV=production node main.js",
     "startdev": "cross-env NODE_ENV=development node main.js",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free-brands": "^5.0.6",
+	  "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/fontawesome-free-regular": "^5.0.6",
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "@nuxtjs/google-adsense": "^1.1.2",
@@ -33,7 +33,7 @@
     "material-design-icons-iconfont": "^3.0.3",
     "materialize-css": "^0.100.2",
     "moment": "^2.19.2",
-    "nuxt": "^1.4.1",
+    "nuxt": "^1.0.0",
     "on-finished": "^2.3.0",
     "prismjs": "^1.8.4",
     "pug": "^2.0.0-rc.4",
@@ -41,14 +41,10 @@
     "urijs": "^1.19.0"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^4.3.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^4.0.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.15.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-vue": "^4.0.0"
   }
 }
