--- a/package.json
+++ b/package.json
@@ -27,16 +27,15 @@
     "cross-env": "^5.1.1",
     "express": "^4.16.2",
     "express-useragent": "^1.0.12",
+    "helmet": "^3.12.1",
     "jquery": "^3.2.1",
     "json-stringify-pretty-compact": "^1.0.4",
     "log4js": "^2.10.0",
     "material-design-icons-iconfont": "^3.0.3",
     "materialize-css": "^0.100.2",
-    "moment": "^2.19.2",
     "nuxt": "^1.0.0",
     "nuxt-rfg-icon": "^0.4.3",
     "on-finished": "^2.3.0",
-    "prismjs": "^1.8.4",
     "pug": "^2.0.0-rc.4",
     "qonfucius-nuxt-fontawesome": "^0.0.1",
     "urijs": "^1.19.0"
