--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "webpack-subresource-integrity": "^1.1.0-rc.4"
   }
 }
