--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mori.space",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "볕뉘의 개인사이트입니다.",
   "author": "small_sunshine <jioo0224@naver.com>",
   "private": true,
@@ -19,21 +19,20 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.6",
     "@fortawesome/fontawesome-free-regular": "^5.0.6",
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
+    "@nuxtjs/bulma": "^1.2.0",
     "@nuxtjs/google-adsense": "^1.1.2",
     "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/sitemap": "^0.0.3",
     "axios": "^0.17.1",
     "babel-core": "^6.26.3",
     "body-parser": "^1.18.2",
+    "bulma": "^0.7.1",
     "cross-env": "^5.1.1",
     "express": "^4.16.2",
     "express-useragent": "^1.0.12",
     "helmet": "^3.12.1",
     "jquery": "^3.2.1",
-    "json-stringify-pretty-compact": "^1.0.4",
     "log4js": "^2.11.0",
-    "material-design-icons-iconfont": "^3.0.3",
-    "materialize-css": "^0.100.2",
     "nuxt": "^1.0.0",
     "nuxt-rfg-icon": "^0.4.3",
     "on-finished": "^2.3.0",
