--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mori.space",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "description": "볕뉘의 개인사이트입니다.",
   "author": "small_sunshine <jioo0224@naver.com>",
   "private": true,
-  "license": "AGPL-3.0",
+  "license": "AGPL-3.0-or-later",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -16,35 +16,40 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free-brands": "^5.0.6",
-    "@fortawesome/fontawesome-free-regular": "^5.0.6",
-    "@fortawesome/fontawesome-free-solid": "^5.0.6",
-    "@nuxtjs/bulma": "^1.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxtjs/google-adsense": "^1.1.2",
-    "@nuxtjs/google-analytics": "^2.0.2",
-    "@nuxtjs/sitemap": "^0.0.3",
-    "axios": "^0.17.1",
+    "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/sitemap": "^1.2.0",
+    "axios": "^0.19.0",
     "babel-core": "^6.26.3",
-    "body-parser": "^1.18.2",
-    "bulma": "^0.7.1",
+    "body-parser": "^1.19.0",
+    "bulma": "^0.7.5",
     "cross-env": "^5.1.1",
-    "express": "^4.16.2",
+    "express": "^4.17.1",
     "express-useragent": "^1.0.12",
-    "helmet": "^3.12.1",
-    "jquery": "^3.2.1",
-    "log4js": "^2.11.0",
-    "nuxt": "^1.0.0",
-    "nuxt-rfg-icon": "^0.4.3",
-    "on-finished": "^2.3.0",
-    "pug": "^2.0.0-rc.4",
-    "qonfucius-nuxt-fontawesome": "^0.0.1"
+    "helmet": "^3.18.0",
+    "i": "^0.3.6",
+    "log4js": "^4.3.2",
+    "npm": "^6.9.0",
+    "nuxt": "^2.8.1",
+    "nuxt-buefy": "^0.3.7",
+    "nuxt-fontawesome": "^0.4.0",
+    "nuxt-rfg-icon": "^0.6.3",
+    "on-finished": "^2.3.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.15.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "webpack-subresource-integrity": "^1.1.0-rc.4"
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.16.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-vue": "^5.2.2",
+    "node-sass": "^4.12.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^7.1.0"
   }
 }
