--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mori.space",
-  "version": "1.3.1",
-  "description": "볕뉘의 개인사이트입니다.",
-  "author": "small_sunshine <jioo0224@naver.com>",
+  "version": "1.4.0",
+  "description": "달보드레의 개인사이트입니다.",
+  "author": "dalbodeule <jioo0224@naver.com>",
   "private": true,
   "license": "AGPL-3.0-or-later",
   "scripts": {
@@ -16,10 +16,10 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@fortawesome/free-regular-svg-icons": "^5.9.0",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/free-regular-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "@nuxtjs/google-adsense": "^1.1.2",
     "@nuxtjs/google-analytics": "^2.2.0",
@@ -30,20 +30,20 @@
     "bulma": "^0.7.5",
     "cross-env": "^5.1.1",
     "express": "^4.17.1",
-    "helmet": "^3.18.0",
-    "log4js": "^4.3.2",
+    "helmet": "^3.20.0",
+    "log4js": "^4.5.1",
     "nuxt": "^2.8.1",
-    "nuxt-buefy": "^0.3.7",
+    "nuxt-buefy": "^0.3.13",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-rfg-icon": "^0.6.3",
     "on-finished": "^2.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
+    "eslint": "^6.1.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.2.2",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.12.0",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0",
