--- a/package.json
+++ b/package.json
@@ -1,52 +1,13 @@
 {
-  "name": "mori.space",
-  "version": "1.4.0",
-  "description": "달보드레의 개인사이트입니다.",
-  "author": "dalbodeule <jioo0224@naver.com>",
   "private": true,
-  "license": "AGPL-3.0-or-later",
   "scripts": {
-    "dev": "nuxt",
     "build": "nuxt build",
-    "startnuxt": "nuxt start",
-    "start": "cross-env NODE_ENV=production node main.js",
-    "startdev": "cross-env NODE_ENV=development node main.js",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.21",
-    "@fortawesome/free-brands-svg-icons": "^5.10.1",
-    "@fortawesome/free-regular-svg-icons": "^5.10.1",
-    "@fortawesome/free-solid-svg-icons": "^5.10.1",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
-    "@nuxtjs/google-adsense": "^1.1.2",
-    "@nuxtjs/google-analytics": "^2.2.0",
-    "@nuxtjs/sitemap": "^1.2.0",
-    "axios": "^0.19.0",
-    "babel-core": "^6.26.3",
-    "body-parser": "^1.19.0",
-    "bulma": "^0.7.5",
-    "cross-env": "^5.1.1",
-    "express": "^4.17.1",
-    "helmet": "^3.20.0",
-    "log4js": "^4.5.1",
-    "nuxt": "^2.8.1",
-    "nuxt-buefy": "^0.3.13",
-    "nuxt-fontawesome": "^0.4.0",
-    "nuxt-rfg-icon": "^0.6.3",
-    "on-finished": "^2.3.0"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "node-sass": "^4.12.0",
-    "pug": "^2.0.4",
-    "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^7.1.0"
+    "nuxt": "^3.1.0"
   }
 }
