--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.3.0",
     "nuxt": "^3.1.0"
   },
-  "dependencies": {
-    "node-fetch-native": "^1.0.1"
-  }
+  "dependencies": {}
 }
