--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.7.7",
+    "@heroicons/vue": "^2.0.14",
     "@nuxtjs/tailwindcss": "^6.3.0",
-    "nuxt": "^3.1.0"
+    "nuxt": "^3.1.0",
+    "tw-elements": "^1.0.0-alpha13"
   },
   "dependencies": {}
 }
