add fa, edit (header, footer, and Layouts)

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
   "endOfLine": "lf",
-  "printWidth": 180,
+  "printWidth": 80,
   "htmlWhitespaceSensitivity": "css",
   "semi": false,
   "singleQuote": false,
@@ -23,7 +23,8 @@
         "semi": false,
         "trailingComma": "none",
         "singleQuote": false,
-        "tabWidth": 2
+        "tabWidth": 2,
+        "printWidth": 80
       }
     },
     {
