--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@headlessui/vue": "^1.7.7",
-    "@heroicons/vue": "^2.0.14",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
@@ -34,6 +33,5 @@
     "vue-eslint-parser": "^9.1.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1"
   }
 }
