--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "lint-prettier": "prettier --write \"**/*.(ts|tsx|vue|js|json)\""
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.3.0",
+    "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint": "^8.32.0",
@@ -30,8 +31,8 @@
     "tw-elements": "^1.0.0-alpha13",
     "typescript": "^4.9.4",
     "vite-plugin-eslint": "^1.8.1",
-    "vue-eslint-parser": "^9.1.0"
+    "vue-eslint-parser": "^9.1.0",
+    "vue-gtag": "^2.0.1"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
