--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/tailwindcss": "^6.3.0",
+    "@oruga-ui/oruga-next": "^0.6.0",
+    "@oruga-ui/theme-bulma": "^0.2.11",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
@@ -26,13 +27,11 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
-    "nuxt": "^3.1.0",
+    "nuxt": "^3.6.3",
     "prettier": "^2.8.3",
-    "tw-elements": "^1.0.0-alpha13",
     "typescript": "^4.9.4",
     "vite-plugin-eslint": "^1.8.1",
     "vue-eslint-parser": "^9.1.0",
     "vue-gtag": "^2.0.1"
-  },
-  "dependencies": {}
+  }
 }
