--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
-    "nuxt": "^3.8.0",
+    "nuxt": "^3.8.2",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.4",
     "vite-plugin-eslint": "^1.8.1",
