--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "vite-plugin-eslint": "^1.8.1",
     "vue-eslint-parser": "^9.3.2",
     "vue-gtag": "^2.0.1"
+  },
+  "dependencies": {
+    "@nuxtjs/google-adsense": "^3.0.0"
   }
 }
