--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-vue": "^9.19.2",
     "nuxt": "^3.11.2",
+    "nuxt-purgecss": "^2.0.0",
     "postcss-import": "^15.1.0",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
