--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-vue": "^9.19.2",
-    "nuxt": "^3.11.2",
+    "nuxt": "^3.12.2",
     "nuxt-purgecss": "^2.0.0",
     "postcss-import": "^15.1.0",
     "prettier": "^3.1.1",
@@ -38,5 +38,6 @@
   },
   "dependencies": {
     "@nuxtjs/google-adsense": "^3.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
