--- a/package.json
+++ b/package.json
@@ -6,38 +6,30 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint \"**/*.{ts,tsx,vue,js}\" --fix",
-    "lint-eslint": "eslint --ignorepath .gitignore \"**/*.{ts,tsx,vue,js}\" --fix",
-    "lint-prettier": "prettier --write \"**/*.(ts|tsx|vue|js|json)\""
+    "lint": "npx eslint \"**/*.{ts,tsx,vue,js}\" --fix",
+    "lint-eslint": "npx eslint --ignorepath .gitignore \"**/*.{ts,tsx,vue,js}\" --fix",
+    "lint-prettier": "npx prettier --write \"**/*.(ts|tsx|vue|js|json)\""
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^3.0.5",
-    "@nuxtjs/eslint-config-typescript": "^12.1.0",
-    "@oruga-ui/oruga-next": "^0.8.2",
-    "@oruga-ui/theme-bulma": "^0.2.11",
-    "@types/node": "^20.10.6",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "eslint": "^8.56.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-brands-svg-icons": "^6.7.1",
+    "@fortawesome/free-regular-svg-icons": "^6.7.1",
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@nuxt/eslint": "^0.7.2",
+    "@oruga-ui/oruga-next": "^0.9.1",
+    "@oruga-ui/theme-bulma": "^0.5.2",
+    "@types/node": "^22.10.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-vue": "^9.19.2",
-    "nuxt": "^3.12.4",
+    "eslint-plugin-prettier": "^5.2.1",
+    "nuxt": "^3.14.1592",
     "nuxt-purgecss": "^2.0.0",
-    "postcss-import": "^15.1.0",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
-    "vite-plugin-eslint": "^1.8.1",
-    "vue-eslint-parser": "^9.3.2",
+    "postcss-import": "^16.1.0",
+    "prettier": "^3.4.1",
+    "typescript": "^5.7.2",
     "vue-gtag": "^2.0.1"
   },
   "dependencies": {
     "@nuxtjs/google-adsense": "^3.0.0"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
