--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,9 @@
 name = "mori-space"
 main = "./.output/server/index.mjs"
 workers_dev = true
-compatibility_date = "2022-11-30"
-node_compat = true
-
-[site]
-bucket = ".output/public"
+compatibility_date = "2024-11-27"
+compatibility_flags = [ "nodejs_compat" ]
+assets = { directory = "./.output/public/", binding = "ASSETS" }
 
 [vars]
 NUXT_PUBLIC_GOOGLE_ANALYTICS_ID = "G-X036TNBC2Q"
